survy answers to map

--- a/surveyapp/.gitignore
+++ b/surveyapp/.gitignore
@@ -1,4 +1,9 @@
 # Miscellaneous
+**/emulators_data*/*
+**/firebase-export*/*
+**/firestore_export*/*
+firebase_options.dart
+
 *.class
 *.log
 *.pyc
