--- a/surveyapp/pubspec.yaml
+++ b/surveyapp/pubspec.yaml
@@ -7,6 +7,9 @@ environment:
   sdk: '>=3.2.6 <4.0.0'
 
 dependencies:
+  cloud_firestore: ^4.15.6
+  firebase_auth: ^4.17.6
+  firebase_core: ^2.25.5
   flutter:
     sdk: flutter
   go_router: ^13.2.0
