--- a/surveyapp/pubspec.yaml
+++ b/surveyapp/pubspec.yaml
@@ -5,6 +5,7 @@ version: 0.1.0
 
 environment:
   sdk: '>=3.2.6 <4.0.0'
+  flutter: ">=3.0.0"
 
 dependencies:
   cloud_firestore: ^4.15.6
@@ -12,13 +13,23 @@ dependencies:
   firebase_core: ^2.25.5
   flutter:
     sdk: flutter
+  flutter_riverpod: ^2.4.10
   go_router: ^13.2.0
   logging: ^1.2.0
+  modal_progress_hud_nsn: ^0.5.1
+  riverpod_annotation: ^2.3.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.1
+  riverpod_generator: ^2.3.11
+  build_runner: ^2.4.8
+  custom_lint: ^0.6.2
+  riverpod_lint: ^2.3.9
 
 flutter:
+  assets:
+    - assets/images/
+
   uses-material-design: true
